@@ -20,7 +20,7 @@
 #ifndef _RESTORE_H_
 #define _RESTORE_H_
 
-int restore(FILE *pubring,const char *secretname,
+int restore(FILE *pubring,FILE *secrets,
 	    enum data_type input_type,const char *outname);
 
 #endif /* !_RESTORE_H_ */
